# JQChatApp

./: .gitignore  CMakeLists.txt  README.md
Resources/: JQChat.qrc
Resources/ca/: ca.crt
Resources/css/: JQChat.css
Resources/translates/: JQChat.qm  JQChat.ts
include/: CommonDefines.h
src/: JQAppManager.cpp  JQAppManager.h  main.cpp
src/Log/: Logger.cpp  Logger.h
src/Login/: Login.cpp  Login.h  Login.ui
src/MainFrame/: ChatWindow.cpp  ChatWindow.h  FriendListView.cpp  FriendListView.h  JQChatMainFrame.cpp  JQChatMainFrame.h  JQChatMainFrame.ui  MessageBubble.cpp  MessageBubble.h
src/Net/: TcpClient.cpp  TcpClient.h  TcpClientManager.cpp  TcpClientManager.h  TcpSingleRequest.cpp  TcpSingleRequest.h  TlsClient.cpp  TlsClient.h  TlsClientManager.cpp  TlsClientManager.h  TlsSingleRequest.cpp  TlsSingleRequest.h
src/Public/: FramelessHelper.cpp  FramelessHelper.h
